--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,47 +79,114 @@
      <div class="col rowAreatext" style="width: 100%;">
       <div class="areatextContent">
        <div class="header-areatextContent">
-        <span id="areatextTitle"></span>
+        <span id="areatextTitle"><img src="https://cdn.discordapp.com/emojis/770766735178989569.png" alt="channel ico" width="23" style="opacity: 0.7; margin: 0 10px 0 0;"> general-offtopic</span> <span class="areatextTitleDesc">Canal para hablar de todo. </span>
+        <span class="areatextTitleIcon">
+          <svg x="0" y="0" class="icon-22AiRD" aria-hidden="false" width="24" height="24" viewBox="0 0 24 24" fill="none"><path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M18 9V14C18 15.657 19.344 17 21 17V18H3V17C4.656 17 6 15.657 6 14V9C6 5.686 8.686 3 12 3C15.314 3 18 5.686 18 9ZM11.9999 21C10.5239 21 9.24793 20.19 8.55493 19H15.4449C14.7519 20.19 13.4759 21 11.9999 21Z" style="color: #b9bbbe;"></path></svg>
+          <img src="https://cdn.discordapp.com/emojis/658538492548218890.png" alt="pin ico" width="23">
+          <img src="https://cdn.discordapp.com/emojis/658538493470965787.png?v=1" alt="pin ico" width="23">
+        </span>
        </div>
        <div class="body-areatextContent">
-        <div class="style-body-areatextContent">
-         <div class="avatar-style-body-areatextContent">
-          <div class="nick-avatar-style-body-areatextContent">
-           <span class="colorNickname"><%=user.username%>
-            <span style="font-size: .7rem;color: #5f5e5e;margin-left: 5px;" id="FechaNickName"></span>
-           </span>
+        <section class="">
+          <ul class="collection">
 
-          </div>
-          <img src="https://cdn.discordapp.com/avatars/<%= user.id %>/<%= user.avatar %>.png" width="45" class="circle" alt="">
-
-
-         </div>
-         <div class="row" style="padding-bottom: 60px;">
-
-          <div class="content-body-areatextContent" style="margin-left: 60px; margin-top: -15px;">
-
-           <div class="col s12" id="informacion">
-
-            <span>TITULO</span>
-
-            <p> SOLO FALTA DISEÑAS ESTA SECCION DE LA CAJA DE MENSAJES.
-             <a href="https://portalmybot.com/" target="_blank">Enlaces</a>
-            </p>
-
-           </div>
-
-          </div>
-         </div>
-        </div>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+            <li class="collection-item avatar">
+              <img src="https://cdn.discordapp.com/avatars/753381968418308167/2171d6bd8a3d36168e6d8d1700df230b.webp?size=4096" alt="" class="circle">
+              <span class="title">Verdesito <span class="datep">21/11/2020</span></span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veniam veritatis sunt assumenda? Sunt nihil cumque illo quisquam nam! Aliquid officiis aliquam reprehenderit, ullam cumque iusto ipsa inventore dolor impedit! </p>
+             
+            </li>
+          
+           
+          </ul>
+        </section>
        </div>
       </div>
      </div>
     </div>
     <div class="rowContentThree">
      <div class="chatArea-body">
-      <div class="msg-chatArea-body">
+      <!-- <div class="msg-chatArea-body">
        No tienes permiso para enviar mensajes en este canal
-      </div>
+      </div> -->
+      <form method="POST" id="enviar_MSG" action="/send">
+        <input autocomplete="off" class="send_discord" type="text" name="msg_send" id="msg_input" placeholder="Enviar mensaje a #general-offtopic" required>
+        <button style="display: none;" type="submit" id="btn_Enviar" onclick="enviar()" name="action">
+          Enviar
+        </button>
+      </form>
      </div>
     </div>
     <div class="rowButtonMobile">
