--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,8 +89,8 @@
         </span>
        </div>
        <div class="body-areatextContent">
-        <section class="">
-          <ul class="collection" id="boxChat">
+        <section style="height: 80vh;">
+          <ul class="collection messages" id="boxChat">
 
           </ul>
         </section>
